# quant_engine

./: .env.codespaces  .env.example  .gitignore  AI_CONTEXT.md  BINANCE_NOTES.md  Procfile  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 3feb0c5bc201_initial_trades_table.py  5cb8eed2e342_add_mainnet_trades_table.py  67a0b6a270ae_add_signals_table.py  d05ec9f0f8a8_add_stream_sessions_table.py  deb8cb457114_add_portfolio_state_log_table.py  e2f0990daa2f_add_signal_log_table.py
api/: main.py
api/routes/: health.py  market.py  paper.py
backtesting/: datasource.py  engine.py  metrics.py  portfolio.py  strategy.py
cache/: redis_client.py
config/: settings.py
core/: logging_setup.py  portfolio_state_log.py  write_queue.py
db/: connection.py  queries.py  session_tracker.py
models/: market_data.py
notifications/: telegram_notifier.py
paper_trading/: live_datasource.py  paper_engine.py  risk_layer.py  signal_logger.py
research/: indicators.py  loader.py
research/experiments/: horizon_sweep.py  intensity_lead.py  order_flow.py  regime_direction.py  run_exhaustion.py  vol_clustering.py
research/stats/: tests.py  (+1 more)
risk/: engine.py  kelly.py  volatility_sizing.py
scripts/: audit_dataset.py  run_backtest.py  run_experiment.py  run_mainnet_stream.py  run_paper.py  run_research.py  run_stream.py  run_walk_forward.py  test_telegram.py
storage/: in_memory_buffer.py
tests/: test_indicators.py  test_metrics.py  test_portfolio.py  test_risk_engine.py  test_trade_model.py
(+9 files in other folders)
