[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-engine"
version = "0.3.0"
description = "A research-grade quantitative trading infrastructure"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "websockets>=16.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "structlog>=25.5.0",
    "asyncpg>=0.31.0",
    "redis[hiredis]>=7.4.0",
    "alembic>=1.18.4",
    "numpy>=2.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
exclude = ["venv*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
